# systemgantry

./: AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
features/: environment.py  infrastructure.feature  proto_export.feature  sql_export.feature  workflow_definitions.feature
features/data/: expected_proto.txt  expected_sql.txt  valid_schema.yaml
features/steps/: common_steps.py  export_steps.py  infrastructure_steps.py  registry_steps.py  workflow_steps.py
specs/001-add-bdd-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-add-bdd-tests/checklists/: requirements.md
specs/001-add-bdd-tests/contracts/: gherkin.md
specs/001-workflow-data-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-workflow-data-model/checklists/: requirements.md
specs/001-workflow-definitions/: quickstart.md  quickstart_output.txt  tasks.md
src/data/: __init__.py  generator.py  registry.py  schema.py
src/models/workflow/: __init__.py  definition.py  edge.py  enums.py  node.py  properties.py  validation.py
src/scripts/: seed_workflow.py
src/service/: main.py
src/ui/: main.py
tests/data/: test_proto_gen.py  test_registry.py  test_registry_sort.py  test_schema_reference.py
tests/models/workflow/: test_workflow_models.py
tests/service/: test_service_main.py
