[project]
name = "systemcatalyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "flet[all]>=0.28.3",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.18.16",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
